ScratchConsole.groovy was in fact valid Java, so renamed and added dependencies to allow it to be built and run from Ant using javac.